Rename array-as-vector, array-as-scalar warning IDs to match documentation (bug #35838)
* NEWS: Note change in name of warning IDS

* ov-base-diag.cc, ov-bool-mat.cc, ov-bool-sparse.cc, ov-ch-mat.cc,
ov-cx-mat.cc, ov-cx-sparse.cc, ov-flt-cx-mat.cc, ov-flt-re-mat.cc, ov-intx.h,
ov-perm.cc, ov-range.cc, ov-re-mat.cc, ov-re-sparse.cc, ov.cc: Rename
array-as-vector, array-as-scalar warning IDs to array-to-vector, array-to-scalar

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 Summary of important user-visible changes for version 3.8:
 ---------------------------------------------------------
 
+ ** Warning IDs renamed:
+
+    Octave:array-as-scalar => Octave:array-to-scalar
+    Octave:array-as-vector => Octave:array-to-vector
+
  ** Other new functions added in 3.8.0:
 
       colorcube
