--- a/NEWS
+++ b/NEWS
@@ -8,8 +8,8 @@ Summary of important user-visible changes for version 3.8:
 
  ** Other new functions added in 3.8.0:
 
-      colorcube
-      lines
+      colorcube   splinefit
+      lines       tetramesh
       rgbplot
 
  ** Deprecated functions.
