doc: Periodic spellcheck of documentation
* aspell-octave.en.pws: Add new words bitmapped, splinefit, xc, and yc
to dictionary.

* install.txi, octave.texi, poly.txi, splinefit.m: Correct typos.

--- a/doc/interpreter/octave.texi
+++ b/doc/interpreter/octave.texi
@@ -890,7 +890,7 @@ Installation
 
 Build Dependencies
 
-* Obtaining the Depencies Automatically::
+* Obtaining the Dependencies Automatically::
 * Build Tools::
 * External Packages::
 
