--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,11 @@ Summary of important user-visible changes for version 3.8:
 
     where the pattern is actually the assertion '^' or start-of-line.
 
+ ** For compatibility with Matlab, the regexp, regexpi, and regexprep
+    functions now process backslash escapes in single-quoted pattern
+    strings.  The regexprep function now processes backslash escapes in
+    single-quoted replacement strings.
+
  ** Redundant terminal comma accepted by parser
 
     A redundant terminal comma is now accepted in matrix
