New Function, shrinkfaces.m
* shrinkfaces.m: New File.
* scripts/plot/module.mk (plot_FCN_FILES): Add it to the list.
* NEWS: Mention shrinkfaces.m.
* plot.txi: Documen it.
* unimplemented.m (missing_functions): Remove shrinkfaces from the
list.

--- a/NEWS
+++ b/NEWS
@@ -63,7 +63,7 @@ Summary of important user-visible changes for version 3.8:
 
       colorcube   splinefit
       lines       tetramesh
-      rgbplot
+      rgbplot     shrinkfaces
 
  ** Deprecated functions.
 
