--- a/NEWS
+++ b/NEWS
@@ -64,6 +64,7 @@ Summary of important user-visible changes for version 3.8:
       colorcube   splinefit
       lines       tetramesh
       rgbplot     shrinkfaces
+      findfigs
 
  ** Deprecated functions.
 
